--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@400;600&family=Roboto+Mono&family=Noto+Sans+SC:wght@400;500;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@400;600&family=Roboto+Mono&family=Noto+Sans+SC:wght@400;500;700&display=swap');
 
 :root {
   --background: 0 0% 100%;
@@ -112,3 +112,7 @@
     @apply bg-[#a87c58] border border-[#8a6343] shadow;
   }
 }
+
+/* body {
+  background-color: red !important;
+} */
